# toc-interface-updater

./: .gitignore  LICENSE.txt  README.md  action.yml  pyproject.toml  update.py  update.sh
.github/workflows/: license.yml
tests/: conftest.py  default.toc  multi.toc  multiple.toc  specific-BCC.toc  specific-Cata.toc  specific-Classic.toc  specific-Mainline.toc  specific-Mists.toc  specific-TBC.toc  specific-Vanilla.toc  specific-Wrath.toc  specific_Cata.toc  test_update.py
toc_interface_updater/: update.py
